# shortcuts-tui

./: .gitignore  PLAN.md  README.md  bunfig.toml  package.json  tsconfig.json
.github/workflows/: release.yml
config/: shortcuts.example.yaml
integrations/neovim/: README.md
integrations/neovim/lua/shortcuts-tui/: health.lua  init.lua
integrations/tmux/: README.md  shortcuts-tui.tmux
integrations/zellij/: Cargo.toml  README.md
integrations/zellij/src/: lib.rs
src/: App.tsx  index.tsx
src/types/: config.ts
src/utils/: configLoader.ts
