[package]
name = "shortcuts-tui-zellij"
version = "0.1.0"
edition = "2021"
description = "Shortcuts TUI plugin for Zellij"
license = "MIT"
authors = ["Raul Gracia"]

[lib]
crate-type = ["cdylib"]

[dependencies]
zellij-tile = "0.40"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[profile.release]
opt-level = "s"
lto = true
